# lilith-zero

./: .dockerignore  .flake8  .gitignore  404.html  AUTHORS  CEDAR_LIKE_SOLUTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.interceptor  Dockerfile.mcp  GEMINI.md  Implementation Plan  LICENSE  MISSION_REPORT.md  NOTICE  README.md  SECURITY.md  WEBHOOK_INVESTIGATION.md  analysis_report.md  classifier_api.py  conversational_agent.py  debug_bot.yaml  debug_pydantic.py  demo.py  demo_agent.py  demo_output.txt  docker-compose.local.yml  docker-compose.yml  handoff_security_audit.md  implementation_plan.md  index.html  init_request.json  install.ps1  install.sh  objects.inv  policies.yaml  policies_dump.json  pr_comments.json  (+19 more)
docs/: TELEMETRY_ARCHITECTURE.md  analysis.md  azure-deployment-guide.md  blueprint.md  changelog.md  contributing.md  development.md  get_started.md  index.md  interceptor_blueprint_rs.md  mkdocs.yml  pyproject.toml  repo_structure_migration.md  security.md
docs/assets/: extra.css  terminal.css
docs/concepts/: architecture.md  formal-verification.md  human-approval-implementation-plan.md  human-in-the-loop.md  process-isolation.md  security-model.md
docs/getting-started/: index.md  installation.md
docs/guides/: fast-mcp-integration.md  middleware-setup.md  python-sdk-integration.md  red-teaming.md  secure-agent-integration.md  writing-policies.md
docs/reference/: cli.md  policy-schema.md  sdk.md
examples/langchain_agent/: PLAYBOOK.md  README.md  agent.py  agent_logic.py  gui.py  mock_server.py  policy.yaml  pyproject.toml  sample.db  setup_db.py  tools.py  upstream.py
lilith-zero/: .gitignore  Cargo.toml  README.md  TAINT_PERSISTENCE_ANALYSIS.md  deny.toml  kani.Dockerfile  patch_security_core.py  run_kani.ps1
lilith-zero/benches/: core_benchmarks.rs
lilith-zero/examples/: isolation_check.rs  test_engine.rs  test_webhook_mapping.rs
lilith-zero/examples/claude_code/: README.md  demo_policy.yaml
lilith-zero/fuzz/: Cargo.toml
lilith-zero/fuzz/fuzz_targets/: fuzz_codec.rs  fuzz_jsonrpc.rs  fuzz_policy.rs
lilith-zero/scripts/: run_kani.ps1
lilith-zero/src/: config.rs  lib.rs  main.rs  verification.rs
lilith-zero/src/engine/: cedar_evaluator.rs  evaluator.rs  mod.rs  pattern_matcher.rs  yaml_to_cedar.rs
lilith-zero/src/engine_core/: audit.rs  auth.rs  constants.rs  crypto.rs  errors.rs  events.rs  mod.rs  models.rs  path_utils.rs  persistence.rs  security_core.rs  session.rs  taint.rs  telemetry.rs  traits.rs  types.rs
lilith-zero/src/hook/: copilot.rs  mod.rs  openclaw.rs  session.rs  vscode.rs
lilith-zero/src/mcp/: codec.rs  http_upstream.rs  mod.rs  pin_store.rs  pipeline.rs  process.rs  server.rs  supervisor.rs  transport.rs
lilith-zero/src/protocol/: mod.rs  negotiation.rs
lilith-zero/src/protocol/v2024_11_05/: adapter.rs  mod.rs
lilith-zero/src/protocol/v2025_11_25/: adapter.rs  mod.rs
lilith-zero/src/server/: auth.rs  copilot_studio.rs  mod.rs  policy_store.rs  webhook.rs
lilith-zero/src/utils/: mod.rs  pe.rs  policy_validator.rs  security.rs  time.rs  uv.rs
lilith-zero/tests/: cedar_taint_persistence_tests.rs  claude_hook_tests.rs  cli_subcommands.rs  copilot_hook_tests.rs  e2e_azure.rs  integration_openclaw.rs  integration_stdio.rs  isolation_check.rs  manual_test.sh  policy_enforcement.rs  policy_hot_reload_tests.rs  production_payload_tests.rs  properties.rs  reproduce_issue.rs  security.rs  test_engine.rs  test_lethal_trifecta.rs  test_webhook_mapping.rs  verify_copilot_hooks.sh  verify_hooks.sh  vscode_hook_tests.rs  webhook_session_persistence_tests.rs  webhook_tests.rs
lilith-zero/tests/fixtures/: copilot_post_tool.json  copilot_pre_tool_allow.json  copilot_pre_tool_deny.json  copilot_session_end.json  copilot_session_start.json  hook_input_allow.json  hook_input_block.json  policy_test.yaml  taint_persistence.cedar
lilith-zero/tests/red_team/: auth_bypass.rs  cedar_policy.rs  mod.rs  path_bypass.rs  process_escape.rs
sdk/: README.md  __init__.py  pyproject.toml
sdk/lilith_zero/: __init__.py  client.py  constants.py  exceptions.py  installer.py  prompts.py
sdk/src/lilith_zero/: __init__.py  client.py  exceptions.py  installer.py  prompts.py
sdk/tests/: conftest.py  test_client.py
sdk/tests/red_team/: test_attacks.py
sdk/tests/resources/: driver.py  manual_server.py  mock_tools.py  vulnerable_tools.py
sentinel/: Cargo.toml  README.md
sentinel/examples/: sandbox_check.rs
sentinel/src/: config.rs  constants.rs  lib.rs  main.rs
sentinel/src/core/: audit.rs  auth.rs  crypto.rs  errors.rs  events.rs  mod.rs  models.rs  security_core.rs  session.rs  taint.rs  traits.rs  types.rs
sentinel/src/engine/: evaluator.rs  pattern_matcher.rs
sentinel/src/mcp/: adapter.rs  codec.rs  mod.rs  pipeline.rs  process.rs  server.rs  transport.rs
sentinel/src/mcp/adapters/: mcp_2024.rs  mcp_2025.rs  mod.rs
sentinel/src/mcp/sandbox/: linux.rs  macos.rs  mod.rs  windows.rs
sentinel/src/protocol/: mod.rs  negotiation.rs  traits.rs  types.rs
sentinel/src/protocol/v2024_11_05/: adapter.rs
sentinel/src/protocol/v2025_11_25/: adapter.rs
sentinel/src/utils/: audit_logger.rs  mod.rs  pe.rs  policy_validator.rs  security.rs  time.rs  uv.rs
sentinel/tests/: security.rs  test_lethal_trifecta.rs
sentinel_core/interceptor/rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  FLOW.mmd  README.md  STRUCTURE.md  TEST_ANALYSIS.md
sentinel_core/interceptor/rust/benches/: crypto_bench.rs
sentinel_core/interceptor/rust/keys/: interceptor_private_key.pem
sentinel_core/interceptor/rust/src/: config.rs  lib.rs  main.rs
sentinel_core/interceptor/rust/tests/: README.md  integration_api_handlers.rs  integration_auth.rs  integration_fail_closed.rs  integration_full_flow.rs  integration_mcp_proxy.rs  integration_tests.rs  run_tests.ps1  test_errors.rs  unit_api.rs  (+5 more)
sentinel_sdk/: README.md  __init__.py  pyproject.toml  setup.py
sentinel_sdk/sentinel_sdk/: __init__.py  client.py  exceptions.py  installer.py
sentinel_sdk/src/: __init__.py  constants.py  prompts.py  sentinel_sdk.py
(+470 files in other folders)
