[package]
name = "lilith-zero"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Peter Tallosy"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.31", features = ["trace"] }

# Utilities
uuid = { version = "1.13", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
ring = "0.17"
rand = "0.9"
base64 = "0.22"
jsonwebtoken = "10.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.11.1"
futures = { version = "0.3", features = ["std"] }
futures-util = "0.3"
async-trait = "0.1"

# Process Isolation
[target.'cfg(windows)'.dependencies]
win32job = "2.0"
windows = { version = "0.62.2", features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_Storage_FileSystem",
    "Win32_Security_Isolation",
    "Win32_System_Pipes",
    "Win32_Security_Authorization",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
nix = { version = "0.31", features = ["signal"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
rusty-sandbox = "0.2"
nix = { version = "0.31", features = ["signal"] }
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
criterion = "0.5"
proptest = "1.10.0"

[[bench]]
name = "core_benchmarks"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.dev.package."*"]
opt-level = 3  # Optimize dependencies in dev
