[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lilith-zero"
version = "0.1.0"
description = "Lilith MCP Middleware SDK"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []

[project.urls]
Homepage = "https://github.com/peti12352/Lilith"
