# Copyright 2026 BadCompany
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "lilith-zero"
version = "0.1.1"
description = "Lilith MCP Middleware SDK"
readme = "README.md"
authors = [
    { name = "Peter Tallosy" },
    { name = "BadCompany", email = "oss@badcompany.dev" },
]
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []

[project.urls]
Homepage = "https://github.com/BadC-mpany/lilith-zero"
