[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.2", features = ["trace"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
ring = "0.17"
rand = "0.8"
base64 = "0.21"
jsonwebtoken = "9.3.0"
tokio-util = { version = "0.7.18", features = ["codec"] }
bytes = "1.11.0"
futures = { version = "0.3.31", features = ["std"] }
futures-util = "0.3.31"

# Process Isolation
[target.'cfg(windows)'.dependencies]
win32job = "2.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }
libc = "0.2"
