
[package]
name = "lilith-zero-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
bytes = "1.11"
tokio-util = { version = "0.7", features = ["codec"] }

[dependencies.lilith-zero]
path = ".."

[[bin]]
name = "fuzz_codec"
path = "fuzz_targets/fuzz_codec.rs"
test = false
doc = false

[[bin]]
name = "fuzz_policy"
path = "fuzz_targets/fuzz_policy.rs"
test = false
doc = false

[[bin]]
name = "fuzz_jsonrpc"
path = "fuzz_targets/fuzz_jsonrpc.rs"
test = false
doc = false
